testimonials slider working but not on image

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -25,5 +25,8 @@
     <script>
       AOS.init();
     </script>
+    <script src="path-to-the-script/splide-extension-auto-scroll.min.js"></script>
+
+
   </body>
 </html>
