--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -22,6 +22,7 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script type="text/javascript" src="javascript/javascript.js"> </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script>
       AOS.init();
     </script>
