--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>Christy Rigg Realtor (2).png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"
     />
-    <title>Christy Scandlan Realtor</title>
+    <title>Christy Rigg Realtor</title>
   </head>
   <body>
     <noscript>
@@ -26,7 +26,6 @@
     <script>
       AOS.init();
     </script>
-    <script src="path-to-the-script/splide-extension-auto-scroll.min.js"></script>
 
 
   </body>
