--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>Christy Rigg Realtor (2).png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"
-    />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <title>Christy Scandlan Realtor</title>
   </head>
   <body>
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="javascript/javascript.js"> </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script>
       AOS.init();
     </script>
