--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>Christy Rigg Realtor (2).png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <title>Christy Scandlan Realtor</title>
+    <title>Christy Rigg Realtor</title>
   </head>
   <body>
     <noscript>
