--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>Christy Rigg Realtor (2).png">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Christy Rigg Realtor</title>
   </head>
   <body>
@@ -21,7 +22,11 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
 
-
+    <script>
+          AOS.init();
+    </script>
 
   </body>
+
+
 </html>
